--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ html{
     box-sizing: border-box;
     border-radius: 46px;
     padding: 8px 20px;
+    text-decoration: none;
 }
 .nav-class{
     font-family: gel;
@@ -57,6 +58,10 @@ html{
     font-weight: bold;
     font-size: 14px;
     line-height: 60px;
+}
+.custom-btn:hover{
+    text-decoration: none;
+    color: white;
 }
 .header-wrapper{
     padding: 100px 0;
